@@ -25,3 +25,4 @@ Added detection of epochs for RPMs and packages from YUM.
 Added an Upgrade All button for CSW packages.
 ---- Changes since 1.440 ----
 Added a Module Config option to not use any update system, even if YUM or APT are installed.
+Added the function package_files for other modules to call, when only a list of files in some package is needed.
